--- a/frontend/public/components/_sysevent-stream.scss
+++ b/frontend/public/components/_sysevent-stream.scss
@@ -18,12 +18,6 @@ $color-dark-border: #ddd;
   }
 }
 
-.co-sysevent-stream__totals {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
 .co-sysevent-stream__connection-error {
   color: $color-red-error;
 }
@@ -46,6 +40,22 @@ $color-dark-border: #ddd;
   }
 }
 
+.co-sysevent-stream__status {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 9px;
+  left: 40px;
+  right: 0;
+  @media(min-width: $screen-xs-min) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  @media(min-width: $screen-sm-min) {
+    left: 45px;
+  }
+}
+
 .co-sysevent-stream__status-box-empty {
   border-style: solid;
   border-color: $color-grey-border;
@@ -59,12 +69,6 @@ $color-dark-border: #ddd;
   left: 0;
   -webkit-transform: translateY(50%);
   transform: translateY(50%);
-}
-
-.co-sysevent-stream__timeline__btn-text {
-  min-width: 320px;
-  -webkit-transform: translate(50px, -60px);
-  transform: translate(50px, -60px);
 }
 
 .co-sysevent-stream__timeline__btn {
@@ -138,7 +142,7 @@ $color-dark-border: #ddd;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(calc(50% - 18px), calc(-50% + 1px));
+    transform: translate(calc(50% - 17px), calc(-50% + 1px));
   }
 }
 
@@ -176,7 +180,7 @@ $color-dark-border: #ddd;
   }
 
   .co-sysevent-stream {
-    padding-left: 40px;
+    padding-left: 20px;
   }
 
   .co-sysevent-stream__timeline {
