More event stream cleanup.
- Fix overflow/wrapping/height issues on mobile.
- Move timestamp and source into main event box.
- Remove event meta box.

--- a/frontend/public/components/_sysevent-icon.scss
+++ b/frontend/public/components/_sysevent-icon.scss
@@ -14,8 +14,7 @@
   $failure-red: #d64456;
 
   .co-sysevent-icon,
-  .co-sysevent__main-box,
-  .co-sysevent__meta-box {
+  .co-sysevent__box {
     border-color: $failure-red;
   }
   .co-sysevent__icon-line {
