--- a/frontend/public/components/_vert-nav.scss
+++ b/frontend/public/components/_vert-nav.scss
@@ -9,7 +9,10 @@
   flex-wrap: wrap;
   list-style: none;
   margin: 0;
-  padding: 0 30px;
+  padding: 0 10px;
+  @media (min-width: $grid-float-breakpoint) {
+    padding: 0 30px;
+  }
 }
 
 .co-m-vert-nav__menu-item {
