--- a/frontend/public/components/sidebars/_resource-sidebar.scss
+++ b/frontend/public/components/sidebars/_resource-sidebar.scss
@@ -1,7 +1,3 @@
-.co-resource-sidebar {
-  border-left: 1px solid #ccc;
-}
-
 .co-resource-sidebar-header {
   margin: 0;
 }
@@ -11,8 +7,12 @@
 }
 
 .co-resource-sidebar-item {
-  border-bottom: 1px solid #ccc;
+  border-top: 1px solid #ccc;
   padding: 20px 0;
+
+  &:first-child {
+    border-top: 0;
+  }
 }
 
 .co-resource-sidebar-item__header {
@@ -26,12 +26,6 @@
 
 .co-resource-sidebar-item__img {
   padding: 20px 0;
-}
-
-.co-resource-sidebar__close-btn {
-  cursor: pointer;
-  height: 14px;
-  width: 14px;
 }
 
 .co-role-sidebar-subheader {
