--- a/frontend/public/style/_layout.scss
+++ b/frontend/public/style/_layout.scss
@@ -148,3 +148,48 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.co-p-has-sidebar {
+  position: relative;
+  @media(min-width: $screen-md-min) {
+    display: flex;
+    height: 100%;
+  }
+
+  &__body {
+    flex: 1 1 700px;
+  }
+
+  &__sidebar {
+    @media(min-width: $screen-md-min) {
+      flex: 1 0 300px;
+      overflow-y: auto;
+    }
+
+    &--bordered {
+      @media(max-width: $screen-sm-max) {
+        border-top: 1px solid #ccc;
+      }
+      @media(min-width: $screen-md-min) {
+        border-left: 1px solid #ccc;
+      }
+    }
+  }
+
+  &__sidebar-heading {
+    font-size: 18px;
+    margin-bottom: 20px;
+    margin-top: 45px;
+  }
+
+  &__sidebar-heading--first {
+    margin-top: 0;
+  }
+
+  &__sidebar--hidden {
+    position: absolute;
+    right: 13px;
+    top: 8px;
+    z-index: 1;
+  }
+}
