--- a/frontend/public/style.scss
+++ b/frontend/public/style.scss
@@ -67,6 +67,6 @@
 @import "components/cloud-services/cloud-services";
 @import "components/graphs/graphs";
 @import "components/modals/modals";
-@import "components/openshift-masthead";
+@import "components/masthead";
 @import "components/nav";
 @import "components/documentation";
