--- a/frontend/public/style/_layout.scss
+++ b/frontend/public/style/_layout.scss
@@ -38,7 +38,7 @@ body {
   }
 }
 
-.os-masthead {
+.co-masthead {
   background-color: $color-pf-black;
   color: $color-os-nav-title;
   position: fixed;
