--- a/frontend/public/components/cloud-services/_cloud-services.scss
+++ b/frontend/public/components/cloud-services/_cloud-services.scss
@@ -48,7 +48,7 @@ $clusterserviceversion-list-border: #ccc;
   align-items: center;
 }
 
-.co-m-page-title--logo .co-clusterserviceversion-logo__icon {
+.co-m-nav-title--logo .co-clusterserviceversion-logo__icon {
   border: 1px solid #e5e5e5;
 }
 
