--- a/frontend/public/components/_cluster-overview.scss
+++ b/frontend/public/components/_cluster-overview.scss
@@ -33,7 +33,7 @@
 }
 
 .cluster-overview-cell {
-  padding-top: 15px;
+  margin-top: -($grid-gutter-width / 2);
   @media(min-width: $screen-lg-min) {
     .col-lg-8 {
       padding-right: 0;
