--- a/frontend/public/components/_nav-title.scss
+++ b/frontend/public/components/_nav-title.scss
@@ -1,43 +1,17 @@
-.co-m-nav-title, .co-m-nav-title__detail {
-  padding: 0 10px;
+.co-m-nav-title {
+  padding: $grid-gutter-width ($grid-gutter-width / 2) 0;
   @media (min-width: $grid-float-breakpoint) {
-    padding: 0 30px;
+    padding-left: $grid-gutter-width;
+    padding-right: $grid-gutter-width;
   }
-}
-
-.co-m-nav-title__detail {
-  border-bottom: 1px solid $color-grey-background-border;
-  background-color: $color-grey-background;
-}
-
-.co-m-page-title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0;
-  padding: 30px 0 0;
-  .co-m-page-title__icon {
-    min-width: 24px;
-    font-size: 16px;
-    border-radius: 12px;
-    height: 24px;
-    line-height: 24px;
-    position: relative;
-    margin-left: 0;
-    padding: 0 7px;
-    top: -2px;
+  &--breadcrumbs {
+    padding-top: 0;
   }
-}
-
-.co-m-page-title--detail {
-  padding-bottom: 30px;
-}
-
-.co-m-page-title--logo {
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-
-.co-m-page-title--breadcrumbs {
-  padding-top: 0;
+  &--detail {
+    border-bottom: 1px solid $color-grey-background-border;
+    background-color: $color-grey-background;
+  }
+  &--logo {
+    padding-top: ($grid-gutter-width / 2);
+  }
 }
