--- a/frontend/public/style/_common.scss
+++ b/frontend/public/style/_common.scss
@@ -1,9 +1,25 @@
+.co-m-pane__body {
+  border-bottom: 1px solid $color-grey-background-border;
+  margin: $grid-gutter-width 0 0;
+  padding: 0 ($grid-gutter-width / 2) $grid-gutter-width;
+  @media (min-width: $screen-sm-min) {
+    padding-left: $grid-gutter-width;
+    padding-right: $grid-gutter-width;
+  }
+  &:last-child {
+    border-bottom: 0;
+  }
+}
+
 .co-m-pane__filter-bar {
   display: flex;
   flex-wrap: wrap;
-  padding: 10px;
+  margin: 10px ($grid-gutter-width / 2) 20px;
   @media (min-width: $grid-float-breakpoint) {
-    padding: 30px 30px 20px 30px;
+    margin-left: $grid-gutter-width;
+    margin-right: $grid-gutter-width;
+    margin-top: $grid-gutter-width;
+
   }
   .btn-group,
   .co-m-primary-action,
@@ -13,12 +29,14 @@
   .btn-group {
     margin-right: 10px;
   }
-}
-
-.co-m-pane__filter-bar--alt {
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
+  &--alt {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  &--group__body {
+    margin-top: 0;
+    padding-top: $grid-gutter-width;
+  }
 }
 
 .co-m-pane__filter-bar-group {
@@ -45,6 +63,23 @@
   .co-m-pane__filter-bar-group + & {
     flex-grow: 0;
   }
+}
+
+.co-m-pane__heading {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 0 $grid-gutter-width;
+  &--center {
+    justify-content: center;
+  }
+  &--logo {
+    margin-bottom: ($grid-gutter-width / 2);
+  }
+}
+
+.co-m-pane__top-controls {
+  margin: 0 0 10px;
 }
 
 .co-inline-block {
@@ -84,9 +119,6 @@
   .co-detail-table__row & {
     margin-bottom: 0;
   }
-  .co-m-pane__heading + & {
-    margin-bottom: 30px;
-  }
   dd {
     font-size: 14px;
   }
@@ -94,8 +126,6 @@
 
 .co-m-pane__explanation {
   color: $color-grey-text;
-  font-size: 14px;
-  padding-top: 14px;
   margin-bottom: 20px;
 }
 
