--- a/frontend/public/style.scss
+++ b/frontend/public/style.scss
@@ -51,6 +51,7 @@
 @import "components/resource";
 @import "components/resource-dropdown";
 @import "components/row-filter";
+@import "components/route";
 @import "components/service";
 @import "components/sysevent-icon";
 @import "components/sysevent-stream";
