--- a/frontend/public/components/_list.scss
+++ b/frontend/public/components/_list.scss
@@ -31,8 +31,7 @@
     margin-left: 10px;
   }
   [class^="col-"] {
-    word-wrap: break-word; // IE 11/16/17 requires legacy name "word-wrap" rather than "overflow-wrap".
-    overflow-wrap: break-word; // new name as per the CSS3 spec
+    @include co-break-word;
   }
 }
 
