--- a/frontend/public/style/_common.scss
+++ b/frontend/public/style/_common.scss
@@ -66,7 +66,6 @@
 }
 
 .co-m-pane__heading {
-  align-items: center;
   display: flex;
   justify-content: space-between;
   margin: 0 0 $grid-gutter-width;
@@ -74,8 +73,16 @@
     justify-content: center;
   }
   &--logo {
+    align-items: center;
     margin-bottom: ($grid-gutter-width / 2);
   }
+}
+
+.co-m-pane__name {
+  @include co-break-word;
+  flex: 1;
+  margin-right: 10px;
+  min-width: 0; // necessary for wrapping since its a flex child
 }
 
 .co-m-pane__top-controls {
@@ -121,6 +128,7 @@
   }
   dd {
     font-size: 14px;
+    @include co-break-word;
   }
 }
 
@@ -177,4 +185,8 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
   padding: 2px 12px;
   background-color: #D64456;
+}
+
+.co-break-word {
+  @include co-break-word;
 }
