Terminals for Pods (like kubectl exec)...
Using term.js with some guidance from the patternfly-react component.

--- a/frontend/public/style.scss
+++ b/frontend/public/style.scss
@@ -73,3 +73,4 @@
 @import "components/utils/name-value-editor";
 @import "components/utils/value-from-pair";
 @import "components/documentation";
+@import "components/terminal";
