Do not outline events on focus.
I do not know what caused this regression.

--- a/frontend/public/style/_overrides.scss
+++ b/frontend/public/style/_overrides.scss
@@ -191,3 +191,7 @@ tags-input .autocomplete .suggestion-item em {
 .modal-footer .alert {
   text-align: left;
 }
+
+.ReactVirtualized__List:focus {
+  outline: none;
+}
