--- a/frontend/public/style/coreos.css
+++ b/frontend/public/style/coreos.css
@@ -131,6 +131,7 @@ input[type="radio"] {
   padding: 0 0 30px 0; }
 
 .co-m-table-grid .row {
+  line-height: 1;
   margin: 0; }
 
 .co-m-table-grid .row,
