--- a/frontend/public/components/_route.scss
+++ b/frontend/public/components/_route.scss
@@ -6,3 +6,12 @@
 .co-m-route-warnings {
   white-space: pre-wrap;
 }
+
+.co-m-route-tls-reveal__title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.co-m-route-tls-reveal__btn {
+  padding-right: 0;
+}
